<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#757474"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:text="@string/name"
        android:id="@+id/nameText"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameText"
        android:id="@+id/inputName"
        android:inputType="text"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputName"
        android:id="@+id/linear1"
        >


    <TextView
        android:id="@+id/ageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:layout_weight="1"
        />

        <TextView
            android:id="@+id/weightView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/heightView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear1"
        android:id="@+id/linear2"
        >


        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="number"
            android:ems="4"
            android:id="@+id/ageInput"
            android:layout_weight="1"
            />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="numberDecimal"
            android:ems="6"
            android:id="@+id/weightInput"
            android:layout_weight="1"
            />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="numberDecimal"
            android:ems="5"
            android:id="@+id/heightInput"
            android:layout_weight="1"
            />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear2"
        android:layout_centerHorizontal="true"
        android:text="@string/report"
        android:onClick="clickButton"
        />

    </RelativeLayout>